deployment/aws/k8s/aws-observability-namespace.yaml
# source: https://docs.aws.amazon.com/eks/latest/userguide/fargate-logging.html
kind: Namespace
apiVersion: v1
metadata:
  name: aws-observability
  labels:
    aws-observability: enabled
