deployment/aws/k8s/todo-api-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-api
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api-container
          image: todo-api-web
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          args:
            [
              "-m",
              "uvicorn",
              "--host",
              "0.0.0.0",
              "--port",
              "80",
              "config.asgi:application",
            ]
