deployment/aws/k8s/todo-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: todo-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
