deployment/aws/k8s/todo-api-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-api-service
spec:
  type: NodePort
  selector:
    app: todo-api
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
